# llm-mindmap

./: .gitignore  README.md  pyproject.toml
.iflow/skills/dev-enforce/: SKILL.md  config.json
.iflow/skills/dev-enforce/.state/: .gitkeep
.iflow/skills/dev-team/: SKILL.md  workflow-automation.md
.iflow/skills/dev-team/.state/: .gitkeep  decisions-log.md  handover.md  project-spec.md  quality-metrics.md  sprint-planner.md  team-composition.md
.iflow/skills/dev-team/agents/: backend-developer.md  devops-engineer.md  frontend-developer.md  project-manager.md  qa-engineer.md  tech-lead.md
.iflow/skills/evaluator/: SKILL.md
.iflow/skills/git-manage/: SKILL.md  config.json  git-manage.py
.iflow/skills/refactor/: SKILL.md
.iflow/skills/talk/: SKILL.md
.iflow/skills/tdd-enforce/: SKILL.md
docs/: architecture.md
examples/: __init__.py  advanced_demo.py  mindmap_demo.py
llm_mindmap/: __init__.py
llm_mindmap/llm/: __init__.py  base.py  iflow.py  utils.py
llm_mindmap/mindmap/: mindmap.py  mindmap_generator.py  mindmap_utils.py
src/llm/: __init__.py  base.py  iflow.py  openrouter.py
src/mindmap/: __init__.py  mindmap.py  mindmap_utils.py
tests/: __init__.py
tests/examples/: __init__.py  test_advanced_demo.py  test_mindmap_demo.py
tests/llm_mindmap/llm/: test_base.py  test_iflow.py  test_openrouter.py
tests/llm_mindmap/mindmap/: __init__.py  test_mindmap.py  test_mindmap_utils.py
tests/src/: __init__.py
tests/src/llm/: __init__.py  test_iflow.py  test_openrouter.py  test_utils.py
tests/src/mindmap/: test_mindmap_generator.py
(+24 files in other folders)
