[project]
name = "llm-mindmap"
version = "0.1.0"
description = "LLM-powered mind map generator for topic decomposition"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llm-clients-python>=0.1.0",
    "pydantic>=2.0.0",
    "graphviz>=0.20.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "json-repair>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
